create important configuration